deploy: 2e181eb25f5a9517f667943a714b57cce466a2d1

--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@ Taedi's Log</a>
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>Contact me:</h5>
+<h5>Contact</h5>
 <ul>
 <li><span>Email: </span> <span>taedi90@gmail.com</span></li>
 <li><span>Github: </span> <span>https://github.com/taedi90</span></li>
