--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Taedi's Log</a>
 </li>
 <div class=dropdown-divider id=top-navbar-divider></div>
 <li class=nav-item>
-<a class=nav-link id=blog-link href=/posts>게시글</a>
+<a class=nav-link id=blog-link href=/posts>Posts</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=/tags/>Tags</a>
@@ -167,7 +167,7 @@ Initial setup Search depends on additional output content type of JSON in config
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>Contact me:</h5>
+<h5>Contact</h5>
 <ul>
 <li><span>Email: </span> <span>taedi90@gmail.com</span></li>
 <li><span>Github: </span> <span>https://github.com/taedi90</span></li>
