--- a/notes/bash/index.html
+++ b/notes/bash/index.html
@@ -116,7 +116,7 @@ echo <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>NA
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
-<h5>Contact me:</h5>
+<h5>Contact</h5>
 <ul>
 <li><span>Email: </span> <span>taedi90@gmail.com</span></li>
 <li><span>Github: </span> <span>https://github.com/taedi90</span></li>
