deploy: f9bcebc767e37a17efd2769960c5e01195116ae9

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Taedi's Log</a>
 </div>
 </nav>
 <div class="container-fluid home" id=home>
-<style>#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu734aa6f98ca0577a577126c08c02e5c3_354464_500x0_resize_q75_box.jpg)}@media(min-width:500px) and (max-width:800px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu734aa6f98ca0577a577126c08c02e5c3_354464_800x0_resize_q75_box.jpg)}}@media(min-width:801px) and (max-width:1200px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu734aa6f98ca0577a577126c08c02e5c3_354464_1200x0_resize_q75_box.jpg)}}@media(min-width:1201px) and (max-width:1500px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu734aa6f98ca0577a577126c08c02e5c3_354464_1500x0_resize_q75_box.jpg)}}@media(min-width:1501px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background.jpg)}}</style>
+<style>#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/santo_hu700037f754ba30ef516dc6e4849a64e5_904955_500x0_resize_q75_box.jpg)}@media(min-width:500px) and (max-width:800px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/santo_hu700037f754ba30ef516dc6e4849a64e5_904955_800x0_resize_q75_box.jpg)}}@media(min-width:801px) and (max-width:1200px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/santo_hu700037f754ba30ef516dc6e4849a64e5_904955_1200x0_resize_q75_box.jpg)}}@media(min-width:1201px) and (max-width:1500px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/santo_hu700037f754ba30ef516dc6e4849a64e5_904955_1500x0_resize_q75_box.jpg)}}@media(min-width:1501px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/santo.jpg)}}</style>
 <span class=on-the-fly-behavior></span>
 <div id=homePageBackgroundImageDivStyled class="background container-fluid"></div>
 <div class="container content text-center">
@@ -82,7 +82,7 @@ Taedi's Log</a>
 <a href=/posts/blog/setting/github-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%84%A4%EC%A0%95-1.-hugo-%EC%84%A4%EC%B9%98/ title="Github 블로그 설정  1. Hugo 설치" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/posts/blog/setting/github-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%84%A4%EC%A0%95-1.-hugo-%EC%84%A4%EC%B9%98/hero.svg alt="Card image cap">
+<img class=card-img-top src=/posts/blog/setting/github-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%84%A4%EC%A0%95-1.-hugo-%EC%84%A4%EC%B9%98/hero.png alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>Github 블로그 설정 1. Hugo 설치</h5>
