deploy: cc50f1438cbf711bc269fae1acee1158f9320234

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Taedi's Log</a>
 <a href=/posts/blog/setting/github-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%84%A4%EC%A0%95-1.-hugo-%EC%84%A4%EC%B9%98/ title="Github 블로그 설정  1. Hugo 설치" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/posts/blog/setting/github-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%84%A4%EC%A0%95-1.-hugo-%EC%84%A4%EC%B9%98/hero.png alt="Card image cap">
+<img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>Github 블로그 설정 1. Hugo 설치</h5>
@@ -97,10 +97,29 @@ Taedi's Log</a>
 </a>
 </div>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/posts/java/tomcat/%EC%9E%90%EB%8F%99-%EB%B0%B0%ED%8F%AC/maven/ title="[Maven] 외부 톰캣에 deploy 설정하기" class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/hero/java.png alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>[Maven] 외부 톰캣에 deploy 설정하기</h5>
+<p class="card-text post-summary"> 외부 톰캣에 프로젝트를 배포하기 위해서는 war 파일을 직접 업로드 하여야하는데, 이걸 IDE에서 run 할때 바로 처리하는 방법을 알아보았다. (이해가 부족하여 문장이 뒤죽박죽..)
+작업 환경 시놀로지 Docker - tomcat-8.5.69버전 IDE - eGov3.10 시놀로지 세팅 ssh 와 vi를 다루는 데 능숙하지 않기 때문에 시놀로지 gui 환경에서 작업을 처리할 방법을 구상해 보았다.
+볼륨 마운트 작업 편의성을 위하여 외부 폴더들에 conf 와 webapps 경로를 마운트 해주었다. &lsquo;컨테이너 선택 > 편집 > 볼륨&rsquo; 으로 이동하여 아래와 같이 폴더를 마운트 하였다.</p>
+</div>
+<div class=card-footer>
+<span class=float-left>September 6, 2021</span>
+<a href=/posts/java/tomcat/%EC%9E%90%EB%8F%99-%EB%B0%B0%ED%8F%AC/maven/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
 <a href=/search/ title="অনুসন্ধানের ফলাফল" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/images/default-hero.jpg alt="Card image cap">
+<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>অনুসন্ধানের ফলাফল</h5>
@@ -121,28 +140,7 @@ Initial setup Search depends on additional output content type of JSON in config
 <a href=/search/ title="Search Results" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/images/default-hero.jpg alt="Card image cap">
-</div>
-<div class=card-body>
-<h5 class=card-title>Search Results</h5>
-<p class="card-text post-summary"> This file exists solely to respond to /search URL with the related search layout template.
-No content shown here is rendered, all content is based in the template layouts/page/search.html
-Setting a very low sitemap priority will tell search engines this is not important content.
-This implementation uses Fusejs, jquery and mark.js
-Initial setup Search depends on additional output content type of JSON in config.toml ``` [outputs] home = [&ldquo;HTML&rdquo;, &ldquo;JSON&rdquo;] ```</p>
-</div>
-<div class=card-footer>
-<span class=float-left>June 8, 2010</span>
-<a href=/search/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
-</div>
-</div>
-</a>
-</div>
-<div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/search/ title="Search Results" class=post-card-link>
-<div class=card>
-<div class=card-head>
-<img class=card-img-top src=/images/default-hero.jpg alt="Card image cap">
+<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>Search Results</h5>
