--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta name=generator content="Hugo 0.88.1">
 <title>Taedi's Log</title>
-<meta name=description content="Portfolio and personal blog of Taesoo Kim.">
+<meta name=description content="비전공자의 코딩 메모장!">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -15,7 +15,7 @@
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <meta property="og:title" content="Taedi's Log">
 <meta property="og:type" content="website">
-<meta property="og:description" content="Portfolio and personal blog of Taesoo Kim">
+<meta property="og:description" content="비전공자의 코딩 메모장!">
 <meta property="og:image" content="https://log.taedi.net/images/author/avator.png">
 <meta property="og:url" content="https://log.taedi.net/">
 <link rel=stylesheet href=/css/sections/home.css>
@@ -79,7 +79,7 @@ Taedi's Log</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/blog/setting/github-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%84%A4%EC%A0%95-1.-hugo-%EC%84%A4%EC%B9%98/ title="Github 블로그 설정  1. Hugo 설치" class=post-card-link>
+<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/1.-hugo-%EC%84%A4%EC%B9%98/ title="Github 블로그 설정  1. Hugo 설치" class=post-card-link>
 <div class=card>
 <div class=card-head>
 <img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
@@ -90,26 +90,26 @@ Taedi's Log</a>
 물론 직접 글을 작성할 때야 체크 항목이 하나 늘어난 것 뿐이지만, 문제는 OPEN API 방식의 포스팅은 완전히 불가능해져 애용하던 Notion2Tistory 를 활용할 수가 없어진 것이 큰 문제였다. (노션에 작성한 글을 API 없이 티스토리에 업로드 하기위해서는 대단한 인내심이 필요했다.</p>
 </div>
 <div class=card-footer>
-<span class=float-left>September 13, 2021</span>
-<a href=/posts/blog/setting/github-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%84%A4%EC%A0%95-1.-hugo-%EC%84%A4%EC%B9%98/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+<span class=float-left>2021년 09월 13일</span>
+<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/1.-hugo-%EC%84%A4%EC%B9%98/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/java/tomcat/%EC%9E%90%EB%8F%99-%EB%B0%B0%ED%8F%AC/maven/ title="[Maven] 외부 톰캣에 deploy 설정하기" class=post-card-link>
+<a href=/posts/java/tomcat/%EC%9E%90%EB%8F%99-%EB%B0%B0%ED%8F%AC/maven/ title="[Maven] 외부 톰캣 deploy 설정하기" class=post-card-link>
 <div class=card>
 <div class=card-head>
 <img class=card-img-top src=/images/hero/java.png alt="Card image cap">
 </div>
 <div class=card-body>
-<h5 class=card-title>[Maven] 외부 톰캣에 deploy 설정하기</h5>
+<h5 class=card-title>[Maven] 외부 톰캣 deploy 설정하기</h5>
 <p class="card-text post-summary"> 외부 톰캣에 프로젝트를 배포하기 위해서는 war 파일을 직접 업로드 하여야하는데, 이걸 IDE에서 run 할때 바로 처리하는 방법을 알아보았다. (이해가 부족하여 문장이 뒤죽박죽..)
 작업 환경 시놀로지 Docker - tomcat-8.5.69버전 IDE - eGov3.10 시놀로지 세팅 ssh 와 vi를 다루는 데 능숙하지 않기 때문에 시놀로지 gui 환경에서 작업을 처리할 방법을 구상해 보았다.
 볼륨 마운트 작업 편의성을 위하여 외부 폴더들에 conf 와 webapps 경로를 마운트 해주었다. &lsquo;컨테이너 선택 > 편집 > 볼륨&rsquo; 으로 이동하여 아래와 같이 폴더를 마운트 하였다.</p>
 </div>
 <div class=card-footer>
-<span class=float-left>September 6, 2021</span>
+<span class=float-left>2021년 09월 06일</span>
 <a href=/posts/java/tomcat/%EC%9E%90%EB%8F%99-%EB%B0%B0%ED%8F%AC/maven/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
@@ -130,7 +130,7 @@ This implementation uses Fusejs, jquery and mark.js
 Initial setup Search depends on additional output content type of JSON in config.toml ``` [outputs] home = [&ldquo;HTML&rdquo;, &ldquo;JSON&rdquo;] ```</p>
 </div>
 <div class=card-footer>
-<span class=float-left>June 8, 2010</span>
+<span class=float-left>2010년 06월 08일</span>
 <a href=/search/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
@@ -151,7 +151,49 @@ This implementation uses Fusejs, jquery and mark.js
 Initial setup Search depends on additional output content type of JSON in config.toml ``` [outputs] home = [&ldquo;HTML&rdquo;, &ldquo;JSON&rdquo;] ```</p>
 </div>
 <div class=card-footer>
-<span class=float-left>June 8, 2010</span>
+<span class=float-left>2010년 06월 08일</span>
+<a href=/search/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/search/ title="Search Results" class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>Search Results</h5>
+<p class="card-text post-summary"> This file exists solely to respond to /search URL with the related search layout template.
+No content shown here is rendered, all content is based in the template layouts/page/search.html
+Setting a very low sitemap priority will tell search engines this is not important content.
+This implementation uses Fusejs, jquery and mark.js
+Initial setup Search depends on additional output content type of JSON in config.toml ``` [outputs] home = [&ldquo;HTML&rdquo;, &ldquo;JSON&rdquo;] ```</p>
+</div>
+<div class=card-footer>
+<span class=float-left>2010년 06월 08일</span>
+<a href=/search/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/search/ title="Search Results" class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>Search Results</h5>
+<p class="card-text post-summary"> This file exists solely to respond to /search URL with the related search layout template.
+No content shown here is rendered, all content is based in the template layouts/page/search.html
+Setting a very low sitemap priority will tell search engines this is not important content.
+This implementation uses Fusejs, jquery and mark.js
+Initial setup Search depends on additional output content type of JSON in config.toml ``` [outputs] home = [&ldquo;HTML&rdquo;, &ldquo;JSON&rdquo;] ```</p>
+</div>
+<div class=card-footer>
+<span class=float-left>2010년 06월 08일</span>
 <a href=/search/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
