--- a/search/index.html
+++ b/search/index.html
@@ -73,9 +73,9 @@ Taedi's Log</a>
 <i class="fas fa-plus-circle"></i><a href=/posts/blog/>blog</a>
 <ul>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/posts/blog/setting/>setting</a>
+<i class="fas fa-plus-circle"></i><a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/>세팅하기</a>
 <ul>
-<li><a href=/posts/blog/setting/github-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%84%A4%EC%A0%95-1.-hugo-%EC%84%A4%EC%B9%98/ title="Github 블로그 설정  1. Hugo 설치">Github 블로그 설정 1. Hugo 설치</a></li>
+<li><a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/1.-hugo-%EC%84%A4%EC%B9%98/ title="1. Hugo 설치">1. Hugo 설치</a></li>
 </ul>
 </li>
 </ul>
