deploy: b84baa00ddaa23b5b56273e05860b62236436e22

--- a/search/index.html
+++ b/search/index.html
@@ -114,6 +114,25 @@ Taedi's Log</a>
 </div>
 </div>
 </section>
+<section class=toc-section id=toc-section>
+<div class=toc-holder>
+<h5 class="text-center pl-3">List</h5>
+<hr>
+<div class=toc>
+<nav id=TableOfContents>
+<ul>
+<li><a href=#initial-setup>Initial setup</a></li>
+<li><a href=#searching-additional-fileds>Searching additional fileds</a>
+<ul>
+<li><a href=#edit-layouts_defaultindexjson>Edit layouts/_default/index.JSON</a></li>
+<li><a href=#edit-fusejs-options-to-search>Edit fuse.js options to Search</a></li>
+</ul>
+</li>
+</ul>
+</nav>
+</div>
+</div>
+</section>
 </div>
 <footer class="container-fluid text-center align-content-center footer pb-2">
 <div class="container pt-5">
