deploy: b81e79baa6410b493b679f420373b8be62d464f2

--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@ Taedi's Log</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/posts/python/setting/%EA%B0%80%EC%83%81%ED%99%98%EA%B2%BD-%EC%84%A4%EC%A0%95/ title="파이썬 가상환경 설정(pyenv, pipenv)" class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/hero/python.png alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>파이썬 가상환경 설정(pyenv, pipenv)</h5>
+<p class="card-text post-summary"> 오랜만에 파이썬을 사용하려고 보니 pyenv 와 pipenv 용어들은 기억나는데 좀처럼 어떻게 써야할지 감이 잡히지 않았다. 물론 글로벌 환경에서 작업해도 무방했지만 소싯적 시험기간에 공부보단 책상정리에 열중했던 주의력 산만한 학생으로서 두가지를 반드시 사용해야겠다는 결의를 다져보았다. 찾아보니 예전에 같은 주제로 메모도 해두었지만 나조차 이해가 되지않을 만큼의 내용으로 도움이 되지 않았고 이에 새롭게 파이썬 가상환경 사용방법을 알아 보았다. 물론 파이썬 가상환경의 전반적인 부분은 아니고 내가 사용할 만큼, 그리고 세팅하면서 발생하는 의구심에 대한 부분을 나의 눈높이 정도로 정리하였다.</p>
+</div>
+<div class=card-footer>
+<span class=float-left>2021년 09월 18일</span>
+<a href=/posts/python/setting/%EA%B0%80%EC%83%81%ED%99%98%EA%B2%BD-%EC%84%A4%EC%A0%95/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
 <a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/1.-hugo-%EC%84%A4%EC%B9%98/ title="Github 블로그 설정  1. Hugo 설치" class=post-card-link>
 <div class=card>
 <div class=card-head>
