--- a/404.html
+++ b/404.html
@@ -17,6 +17,8 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://log.taedi.net/404.html">
 <link rel=stylesheet href=/css/404.css>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-52CHZ4CKK9"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-52CHZ4CKK9',{anonymize_ip:!1})}</script>
 </head>
 <body data-spy=scroll data-target=#TableOfContents data-offset=80>
 <div class="container-fluid bg-dimmed wrapper">
