--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <link rel=stylesheet href=/css/sections/achievements.css>
 <link rel=stylesheet href=/css/sections/accomplishments.css>
 <link rel=stylesheet href=/css/style.css>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-52CHZ4CKK9"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-52CHZ4CKK9',{anonymize_ip:!1})}</script>
 </head>
 <body data-spy=scroll data-target=#top-navbar data-offset=100>
 <nav class="navbar navbar-expand-xl top-navbar initial-navbar" id=top-navbar>
