deploy: 98f4d3701d5eb716e69b9e50d722a9433ca1a59d

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <script defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1882367656929494" crossorigin=anonymous></script>
+<link rel=icon type=image/png href=/images/site/favicon.svg>
 <meta property="og:title" content="Taedi's Log">
 <meta property="og:type" content="website">
 <meta property="og:description" content="비전공자의 코딩 메모장!">
@@ -36,6 +37,7 @@
 <nav class="navbar navbar-expand-xl top-navbar initial-navbar" id=top-navbar>
 <div class=container>
 <a class=navbar-brand href=/>
+<img src=/images/site/inverted-logo.svg id=logo alt=Logo>
 Taedi's Log</a>
 <button class="navbar-toggler navbar-dark" id=navbar-toggler type=button data-toggle=collapse data-target=#top-nav-items aria-label=menu>
 <span class=navbar-toggler-icon></span>
@@ -58,6 +60,8 @@ Taedi's Log</a>
 </ul>
 </div>
 </div>
+<img src=/images/site/main-logo.svg class=d-none id=main-logo alt=Logo>
+<img src=/images/site/inverted-logo.svg class=d-none id=inverted-logo alt="Inverted Logo">
 </nav>
 <div class="container-fluid home" id=home>
 <style>#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu843472f2ca99293ec19aed8a95dd0023_1082979_500x0_resize_q75_box.jpg)}@media(min-width:500px) and (max-width:800px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu843472f2ca99293ec19aed8a95dd0023_1082979_800x0_resize_q75_box.jpg)}}@media(min-width:801px) and (max-width:1200px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu843472f2ca99293ec19aed8a95dd0023_1082979_1200x0_resize_q75_box.jpg)}}@media(min-width:1201px) and (max-width:1500px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu843472f2ca99293ec19aed8a95dd0023_1082979_1500x0_resize_q75_box.jpg)}}@media(min-width:1501px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background.jpg)}}</style>
