deploy: 06418d54256059f7422be934a82752ff68ac3410

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta property="og:title" content="Taedi's Log">
 <meta property="og:type" content="website">
 <meta property="og:description" content="비전공자의 코딩 메모장!">
-<meta property="og:image" content="https://log.taedi.net/images/author/avator.png">
+<meta property="og:image" content="https://log.taedi.net/images/site/main-logo.svg">
 <meta property="og:url" content="https://log.taedi.net/">
 <link rel=stylesheet href=/css/sections/home.css>
 <link rel=stylesheet href=/css/sections/about.css>
