--- a/index.html
+++ b/index.html
@@ -86,6 +86,24 @@ Taedi's Log</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/posts/java/ide/%EC%9D%B4%ED%81%B4%EB%A6%BD%EC%8A%A4-%EB%A7%A5-%ED%95%9C%EA%B8%80-%EC%A7%A4%EB%A6%BC%EB%AC%B8%EC%A0%9C-%ED%95%B4%EA%B2%B0/ title="이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결" class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/hero/java.png alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결</h5>
+<p class="card-text post-summary"> 서론 맥에서 이클립스를 사용하려면 불편함을 감수해야하는 부분이 있는데 그중에서도 제일은 한글 짤림 현상일 것이다. 이것은 한글 타이핑 시 마지막에 입력한 글자가 지워지는 현상인데, 이를 방지하려면 문장 작성 후 esc, enter, space 키 등을 입력 해주어야 하는 번거로움이 있다. (SQL 클라이언트 툴인 Dbeaver 또한 동일한 증상을 가지고 있다.)
+구글 검색을 해보니 2013년 이전부터 리포팅 되어왔으나 프로그램 개선이나 해결책이 없는 채로 방치된 문제로 보였고, 여러 포스팅에서 맞춤법 자동 수정 을 해제하라는 등의 낚시성 솔루션만 있었지 실질적인 해결책은 찾지 못했다.</p>
+</div>
+<div class=card-footer>
+<span class=float-left>2021년 10월 16일</span>
+<a href=/posts/java/ide/%EC%9D%B4%ED%81%B4%EB%A6%BD%EC%8A%A4-%EB%A7%A5-%ED%95%9C%EA%B8%80-%EC%A7%A4%EB%A6%BC%EB%AC%B8%EC%A0%9C-%ED%95%B4%EA%B2%B0/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
 <a href=/posts/python/setting/%EA%B0%80%EC%83%81%ED%99%98%EA%B2%BD-%EC%84%A4%EC%A0%95/ title="파이썬 가상환경 설정(pyenv, pipenv)" class=post-card-link>
 <div class=card>
 <div class=card-head>
@@ -98,6 +116,23 @@ Taedi's Log</a>
 <div class=card-footer>
 <span class=float-left>2021년 09월 18일</span>
 <a href=/posts/python/setting/%EA%B0%80%EC%83%81%ED%99%98%EA%B2%BD-%EC%84%A4%EC%A0%95/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/posts/test/ title=테스트 class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/hero/python.png alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>테스트</h5>
+<p class="card-text post-summary"> </p>
+</div>
+<div class=card-footer>
+<span class=float-left>2021년 09월 18일</span>
+<a href=/posts/test/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
