--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Taedi's Log</a>
 <a href=/posts/java/ide/%EC%9D%B4%ED%81%B4%EB%A6%BD%EC%8A%A4-%EB%A7%A5-%ED%95%9C%EA%B8%80-%EC%A7%A4%EB%A6%BC%EB%AC%B8%EC%A0%9C-%ED%95%B4%EA%B2%B0/ title="이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
+<img class=card-img-top src=/images/hero/java.png alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결</h5>
