deploy: 09841fc314651e9aef60c63477308bc8b3afedea

--- a/search/index.html
+++ b/search/index.html
@@ -100,6 +100,9 @@ Taedi's Log</a>
 <i class="fas fa-plus-circle"></i><a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/>세팅하기</a>
 <ul>
 <li><a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/1.-hugo-%EC%84%A4%EC%B9%98/ title="1. Hugo 설치">1. Hugo 설치</a></li>
+<li><a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/2.-%ED%85%8C%EB%A7%88-%EC%84%B8%ED%8C%85/ title="2. 테마 세팅">2. 테마 세팅</a></li>
+<li><a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/3.-%ED%8E%98%EC%9D%B4%EC%A7%80-%EB%B3%80%ED%99%98/ title="3. 페이지 변환">3. 페이지 변환</a></li>
+<li><a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/4.-%EC%97%85%EB%A1%9C%EB%93%9C/ title="4. 업로드">4. 업로드</a></li>
 </ul>
 </li>
 </ul>
