deploy: 082121601ddeb602227fcc99dc1a80f0888e0200

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Taedi's Log</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/java/ide/%EC%9D%B4%ED%81%B4%EB%A6%BD%EC%8A%A4-%EB%A7%A5-%ED%95%9C%EA%B8%80-%EC%A7%A4%EB%A6%BC%EB%AC%B8%EC%A0%9C-%ED%95%B4%EA%B2%B0/ title="이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결" class=post-card-link>
+<a href=/eclipse-mac-kor-fix/ title="이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결" class=post-card-link>
 <div class=card>
 <div class=card-head>
 <img class=card-img-top src=/images/hero/java.png alt="Card image cap">
@@ -98,13 +98,13 @@ Taedi's Log</a>
 </div>
 <div class=card-footer>
 <span class=float-left>2021년 10월 16일</span>
-<a href=/posts/java/ide/%EC%9D%B4%ED%81%B4%EB%A6%BD%EC%8A%A4-%EB%A7%A5-%ED%95%9C%EA%B8%80-%EC%A7%A4%EB%A6%BC%EB%AC%B8%EC%A0%9C-%ED%95%B4%EA%B2%B0/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/eclipse-mac-kor-fix/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/python/setting/%EA%B0%80%EC%83%81%ED%99%98%EA%B2%BD-%EC%84%A4%EC%A0%95/ title="파이썬 가상환경 설정(pyenv, pipenv)" class=post-card-link>
+<a href=/python-virtual-environment-setup/ title="파이썬 가상환경 설정(pyenv, pipenv)" class=post-card-link>
 <div class=card>
 <div class=card-head>
 <img class=card-img-top src=/images/hero/python.png alt="Card image cap">
@@ -115,13 +115,13 @@ Taedi's Log</a>
 </div>
 <div class=card-footer>
 <span class=float-left>2021년 09월 18일</span>
-<a href=/posts/python/setting/%EA%B0%80%EC%83%81%ED%99%98%EA%B2%BD-%EC%84%A4%EC%A0%95/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/python-virtual-environment-setup/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/4.-%EC%97%85%EB%A1%9C%EB%93%9C/ title="Github 블로그 설정 4. 대망의 업로드" class=post-card-link>
+<a href=/hugo-upload/ title="Github 블로그 설정 4. 대망의 업로드" class=post-card-link>
 <div class=card>
 <div class=card-head>
 <img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
@@ -134,13 +134,13 @@ Taedi's Log</a>
 </div>
 <div class=card-footer>
 <span class=float-left>2021년 09월 13일</span>
-<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/4.-%EC%97%85%EB%A1%9C%EB%93%9C/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/hugo-upload/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/3.-%ED%8E%98%EC%9D%B4%EC%A7%80-%EB%B3%80%ED%99%98/ title="Github 블로그 설정 3. Notion 페이지 변환" class=post-card-link>
+<a href=/notion-to-hugo-toha/ title="Github 블로그 설정 3. Notion 페이지 변환" class=post-card-link>
 <div class=card>
 <div class=card-head>
 <img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
@@ -154,33 +154,33 @@ Taedi's Log</a>
 </div>
 <div class=card-footer>
 <span class=float-left>2021년 09월 13일</span>
-<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/3.-%ED%8E%98%EC%9D%B4%EC%A7%80-%EB%B3%80%ED%99%98/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/notion-to-hugo-toha/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/2.-%ED%85%8C%EB%A7%88-%EC%84%B8%ED%8C%85/ title="Github 블로그 설정 2. Toha 테마 세팅" class=post-card-link>
+<a href=/hugo-setting/ title="Github 블로그 설정 2. 세부 설정" class=post-card-link>
 <div class=card>
 <div class=card-head>
 <img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
 </div>
 <div class=card-body>
-<h5 class=card-title>Github 블로그 설정 2. Toha 테마 세팅</h5>
-<p class="card-text post-summary"> 주의사항 테마는 themes 폴더 내의 파일을 수정하는 것이 아니라 루트폴더(프로젝트 최상위 폴더)에서 수정하면 배포시에 우선적으로 선택된다는 것 (더 자세한 내용은 이 분 블로그 내용 참고)
-themes 폴더에서 수정하고 싶은 내용이 있다면 프로젝트 루트 폴더에 동일한 경로를 만들고 해당 파일을 복사해서 수정해주면 된다.
-single.html 파일이 /프로젝트 폴더/layouts/single.html 와 /프로젝트 폴더/themes/toha/layouts/single.html 두 곳에 있다면 사이트를 배포할 때 둘 중 상위 경로의 데이터를 취한다는 것이다.
-처음엔 이 내용을 몰라서 submodule로 등록한 테마 디렉토리를 직접 수정해가며 &lsquo;나중에 테마 업데이트가 있으면 이 부분을 어떻게 반영하지&mldr;?</p>
+<h5 class=card-title>Github 블로그 설정 2. 세부 설정</h5>
+<p class="card-text post-summary"> 글 게시 작성한 글을 게시하려면 md 형식으로 저장하여 프로젝트 내부의 content 폴더에 위치시키면 된다.
+front matter 설정 글 상단에 yaml, toml, json 키 값 쌍으로 이워진 front matter 를 작성해야한다. front matter 는 종류가 꽤 다양해 공식 문서를 확인해보고 필요한 것들을 선택적으로 사용하면 될 듯하다. 그리고 적용한 테마에 따라서 필수적으로 요구되는 front matter 가 달라질 수 있고 형식 또한 달라질 수 있는 듯 하다.
+https://gohugo.io/content-management/front-matter/
+섹션 설정 hugo는 폴더로 섹션과 하위 섹션을 구분할 수 있다.</p>
 </div>
 <div class=card-footer>
 <span class=float-left>2021년 09월 13일</span>
-<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/2.-%ED%85%8C%EB%A7%88-%EC%84%B8%ED%8C%85/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/hugo-setting/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
 </div>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/1.-hugo-%EC%84%A4%EC%B9%98/ title="Github 블로그 설정  1. Hugo 설치" class=post-card-link>
+<a href=/hugo-install/ title="Github 블로그 설정  1. Hugo 설치" class=post-card-link>
 <div class=card>
 <div class=card-head>
 <img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
@@ -192,7 +192,7 @@ single.html 파일이 /프로젝트 폴더/layouts/single.html 와 /프로젝트
 </div>
 <div class=card-footer>
 <span class=float-left>2021년 09월 13일</span>
-<a href=/posts/blog/%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0/1.-hugo-%EC%84%A4%EC%B9%98/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+<a href=/hugo-install/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
