--- a/hugo-upload/index.html
+++ b/hugo-upload/index.html
@@ -59,15 +59,6 @@ Taedi's Log</a>
 <li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/posts/blog/>blog</a>
-<ul class=active>
-<li><a href=/hugo-install/ title="1. Hugo 설치">1. Hugo 설치</a></li>
-<li><a href=/hugo-setting/ title="2. hugo 세부 설정">2. hugo 세부 설정</a></li>
-<li><a href=/notion-to-hugo-toha/ title="3. notion 페이지 변환">3. notion 페이지 변환</a></li>
-<li><a class=active href=/hugo-upload/ title="4. hugo 업로드">4. hugo 업로드</a></li>
-</ul>
-</li>
-<li>
 <i class="fas fa-plus-circle"></i><a href=/posts/java/>java</a>
 <ul>
 <li><a href=/tomcat-external-deploy-maven/ title="외부 톰캣 자동 배포">외부 톰캣 자동 배포</a></li>
@@ -78,6 +69,15 @@ Taedi's Log</a>
 <i class="fas fa-plus-circle"></i><a href=/posts/python/>python</a>
 <ul>
 <li><a href=/python-virtual-environment-setup/ title="파이썬 가상환경 설정">파이썬 가상환경 설정</a></li>
+</ul>
+</li>
+<li>
+<i class="fas fa-minus-circle"></i><a class=active href=/posts/blog/>blog</a>
+<ul class=active>
+<li><a href=/hugo-install/ title="1. Hugo 설치">1. Hugo 설치</a></li>
+<li><a href=/hugo-setting/ title="2. 세부 설정">2. 세부 설정</a></li>
+<li><a href=/notion-to-hugo-toha/ title="3. notion 페이지 변환">3. notion 페이지 변환</a></li>
+<li><a class=active href=/hugo-upload/ title="4. 업로드 하기">4. 업로드 하기</a></li>
 </ul>
 </li>
 </div>
@@ -232,12 +232,6 @@ $ git push origin source
 <a href=/notion-to-hugo-toha/ title="Github 블로그 설정 3. Notion 페이지 변환" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
 <div class=next-prev-text>Github 블로그 설정 3. Notion 페이지 변환</div>
-</a>
-</div>
-<div class="col-md-6 next-article">
-<a href=/tomcat-external-deploy-maven/ title="[Maven] 외부 톰캣에 deploy 설정하기" class="btn btn-outline-info">
-<div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>[Maven] 외부 톰캣에 deploy 설정하기</div>
 </a>
 </div>
 </div>
