--- a/tomcat-external-deploy-maven/index.html
+++ b/tomcat-external-deploy-maven/index.html
@@ -59,15 +59,6 @@ Taedi's Log</a>
 <li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/posts/blog/>blog</a>
-<ul>
-<li><a href=/hugo-install/ title="1. Hugo 설치">1. Hugo 설치</a></li>
-<li><a href=/hugo-setting/ title="2. hugo 세부 설정">2. hugo 세부 설정</a></li>
-<li><a href=/notion-to-hugo-toha/ title="3. notion 페이지 변환">3. notion 페이지 변환</a></li>
-<li><a href=/hugo-upload/ title="4. hugo 업로드">4. hugo 업로드</a></li>
-</ul>
-</li>
-<li>
 <i class="fas fa-minus-circle"></i><a class=active href=/posts/java/>java</a>
 <ul class=active>
 <li><a class=active href=/tomcat-external-deploy-maven/ title="외부 톰캣 자동 배포">외부 톰캣 자동 배포</a></li>
@@ -78,6 +69,15 @@ Taedi's Log</a>
 <i class="fas fa-plus-circle"></i><a href=/posts/python/>python</a>
 <ul>
 <li><a href=/python-virtual-environment-setup/ title="파이썬 가상환경 설정">파이썬 가상환경 설정</a></li>
+</ul>
+</li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/posts/blog/>blog</a>
+<ul>
+<li><a href=/hugo-install/ title="1. Hugo 설치">1. Hugo 설치</a></li>
+<li><a href=/hugo-setting/ title="2. 세부 설정">2. 세부 설정</a></li>
+<li><a href=/notion-to-hugo-toha/ title="3. notion 페이지 변환">3. notion 페이지 변환</a></li>
+<li><a href=/hugo-upload/ title="4. 업로드 하기">4. 업로드 하기</a></li>
 </ul>
 </li>
 </div>
@@ -295,13 +295,7 @@ usr/local/tomcat/webapps.dist/manager
 <script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
-<div class="col-md-6 previous-article">
-<a href=/hugo-upload/ title="Github 블로그 설정 4. 대망의 업로드" class="btn btn-outline-info">
-<div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>Github 블로그 설정 4. 대망의 업로드</div>
-</a>
-</div>
-<div class="col-md-6 next-article">
+<div class="col-md-12 next-article">
 <a href=/eclipse-mac-kor-fix/ title="이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
 <div class=next-prev-text>이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결</div>
