--- a/hugo-install/index.html
+++ b/hugo-install/index.html
@@ -155,7 +155,7 @@ hugo server --bind 아이피주소 -D
 <li><a href=https://utteranc.es/>https://utteranc.es/</a></li>
 </ul>
 </div>
-<ins class=adsbygoogle style=display:block data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
+<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100% data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
 <script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
