--- a/hugo-setting/index.html
+++ b/hugo-setting/index.html
@@ -130,7 +130,7 @@ Taedi's Log</a>
 <li><a href=https://ialy1595.github.io/post/blog-construct-2/>https://ialy1595.github.io/post/blog-construct-2/</a></li>
 </ul>
 </div>
-<ins class=adsbygoogle style=display:block data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
+<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100% data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
 <script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
