--- a/hugo-upload/index.html
+++ b/hugo-upload/index.html
@@ -224,7 +224,7 @@ $ git push origin source
 <li><a href=https://gohugo.io/hosting-and-deployment/hosting-on-github/>https://gohugo.io/hosting-and-deployment/hosting-on-github/</a></li>
 </ul>
 </div>
-<ins class=adsbygoogle style=display:block data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
+<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100% data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
 <script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
