--- a/python-virtual-environment-setup/index.html
+++ b/python-virtual-environment-setup/index.html
@@ -386,7 +386,7 @@ alias python<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;pyt
 <li><a href=https://towardsdatascience.com/python-environment-101-1d68bda3094d>https://towardsdatascience.com/python-environment-101-1d68bda3094d</a></li>
 </ul>
 </div>
-<ins class=adsbygoogle style=display:block data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
+<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100% data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
 <script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
