--- a/eclipse-mac-kor-fix/index.html
+++ b/eclipse-mac-kor-fix/index.html
@@ -253,7 +253,7 @@ Taedi's Log</a>
 <p><img src=images/pic-0003.png alt="스크린샷 2021-10-17 오전 1.58.11.png"></p>
 <p><img src=images/pic-0004.gif alt="화면 기록 2021-10-17 오전 2.14.00.gif"></p>
 </div>
-<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100% data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
+<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100%;text-align:center data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
 <script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
