--- a/tomcat-external-deploy-maven/index.html
+++ b/tomcat-external-deploy-maven/index.html
@@ -291,7 +291,7 @@ usr/local/tomcat/webapps.dist/manager
 <p><a href=https://www.baeldung.com/tomcat-deploy-war>https://www.baeldung.com/tomcat-deploy-war</a></p>
 <p><a href=https://maven.apache.org/examples/injecting-properties-via-settings.html>https://maven.apache.org/examples/injecting-properties-via-settings.html</a></p>
 </div>
-<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100% data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
+<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100%;text-align:center data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
 <script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
