deploy: cd1a3caa6aeb2dbb526c404dcb84ef9baf269a7a

--- a/eclipse-mac-kor-fix/index.html
+++ b/eclipse-mac-kor-fix/index.html
@@ -110,7 +110,7 @@ Taedi's Log</a>
 <h2 id=서론>서론</h2>
 <p>맥에서 이클립스를 사용하려면 불편함을 감수해야하는 부분이 있는데 그중에서도 제일은 <code>한글 짤림</code> 현상일 것이다. 이것은 한글 타이핑 시 마지막에 입력한 글자가 지워지는 현상인데, 이를 방지하려면 문장 작성 후 esc, enter, space 키 등을 입력 해주어야 하는 번거로움이 있다. (SQL 클라이언트 툴인 <code>Dbeaver</code> 또한 동일한 증상을 가지고 있다.)</p>
 <p><img src=images/pic-0002.gif alt="이클립스 한글 짤림.gif"></p>
-<p>구글 검색을 해보니 2013년 이전부터 리포팅 되어왔으나 프로그램 개선이나 해결책이 없는 채로 방치된 문제로 보였고, 여러 포스팅에서 <code>맞춤법 자동 수정</code> 을 해제하라는 등의 낚시성 솔루션만 있었지 실질적인 해결책은 찾지 못했다.</p>
+<p>구글 검색을 해보니 2013년 이전부터 리포팅 되어왔으나 프로그램 개선이나 해결책이 없는 채로 방치된 문제로 보였고, 여러 포스팅에서 <code>맞춤법 자동 수정</code> 을 해제하라는 말이 있었지만 일단 현재기준으로 전혀 먹히지 않는다.</p>
 <p>결국, 개인적인 삽질 끝에 <code>Karabiner-Elements</code> 를 활용해서 불편함을 어느정도 해소할 수 있는 방법을 찾아보았다.</p>
 <p>바쁘신 분들은 아래에 적용 방법 부분만 확인하시길!</p>
 <h2 id=원인-분석>원인 분석</h2>
