--- a/hugo-install/index.html
+++ b/hugo-install/index.html
@@ -138,7 +138,7 @@ cd taedi90.github.io
 git init
 </code></pre></div><h3 id=3-테마-다운로드>3. 테마 다운로드</h3>
 <p>테마는 Hugo 사이트에서 여러가지 중에 선택할 수 있는데 테마마다 설정들이 조금씩 달라 자주 변경하는 것은 쉽지 않을 것 같다. 목차와 카테고리 기능이 필요해 <a href=https://themes.gohugo.io/themes/toha/>Toha 테마</a>를 선택했다</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>it submodule add https://github.com/hugo-toha/toha.git themes/toha
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>git submodule add https://github.com/hugo-toha/toha.git themes/toha
 </code></pre></div><h3 id=4-기본-설정>4. 기본 설정</h3>
 <p>테마마다 설정이 다를 수 있으므로 각 테마의 readme.md 파일이나 Docs 사이트를 확인하여 config.yaml 파일을 알맞게 수정해준다.</p>
 <h3 id=5-실행>5. 실행</h3>
@@ -155,8 +155,6 @@ hugo server --bind 아이피주소 -D
 <li><a href=https://utteranc.es/>https://utteranc.es/</a></li>
 </ul>
 </div>
-<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100%;text-align:center data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
-<script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
@@ -219,8 +217,8 @@ hugo server --bind 아이피주소 -D
 <div class="col-md-4 col-sm-12">
 <h5>Contact</h5>
 <ul>
-<li><span>Email: </span> <span>taedi90@gmail.com</span></li>
-<li><span>Github: </span> <span>https://github.com/taedi90</span></li>
+<li><span>Email: </span> <a href=mailto:taedi90@gmail.com><span>taedi90@gmail.com</span></a></li>
+<li><span>Github: </span> <a href=https://github.com/taedi90><span>https://github.com/taedi90</span></a></li>
 </ul>
 </div>
 </div>
