--- a/hugo-upload/index.html
+++ b/hugo-upload/index.html
@@ -224,8 +224,6 @@ $ git push origin source
 <li><a href=https://gohugo.io/hosting-and-deployment/hosting-on-github/>https://gohugo.io/hosting-and-deployment/hosting-on-github/</a></li>
 </ul>
 </div>
-<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100%;text-align:center data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
-<script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
@@ -279,8 +277,8 @@ $ git push origin source
 <div class="col-md-4 col-sm-12">
 <h5>Contact</h5>
 <ul>
-<li><span>Email: </span> <span>taedi90@gmail.com</span></li>
-<li><span>Github: </span> <span>https://github.com/taedi90</span></li>
+<li><span>Email: </span> <a href=mailto:taedi90@gmail.com><span>taedi90@gmail.com</span></a></li>
+<li><span>Github: </span> <a href=https://github.com/taedi90><span>https://github.com/taedi90</span></a></li>
 </ul>
 </div>
 </div>
