--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=ko>
 <head>
-<meta name=generator content="Hugo 0.88.1">
+<meta name=generator content="Hugo 0.89.4">
 <title>Taedi's Log</title>
 <meta name=description content="비전공자의 코딩 메모장!">
 <meta charset=utf-8>
@@ -64,7 +64,7 @@ Taedi's Log</a>
 <img src=/images/site/inverted-logo.svg class=d-none id=inverted-logo alt="Inverted Logo">
 </nav>
 <div class="container-fluid home" id=home>
-<style>#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu843472f2ca99293ec19aed8a95dd0023_1082979_500x0_resize_q75_box.jpg)}@media(min-width:500px) and (max-width:800px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu843472f2ca99293ec19aed8a95dd0023_1082979_800x0_resize_q75_box.jpg)}}@media(min-width:801px) and (max-width:1200px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu843472f2ca99293ec19aed8a95dd0023_1082979_1200x0_resize_q75_box.jpg)}}@media(min-width:1201px) and (max-width:1500px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background_hu843472f2ca99293ec19aed8a95dd0023_1082979_1500x0_resize_q75_box.jpg)}}@media(min-width:1501px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/background.jpg)}}</style>
+<style>#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/fireplace_hu03b6caa395b3743220b4e9dfb053cff0_2032116_500x0_resize_q75_box.jpg)}@media(min-width:500px) and (max-width:800px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/fireplace_hu03b6caa395b3743220b4e9dfb053cff0_2032116_800x0_resize_q75_box.jpg)}}@media(min-width:801px) and (max-width:1200px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/fireplace_hu03b6caa395b3743220b4e9dfb053cff0_2032116_1200x0_resize_q75_box.jpg)}}@media(min-width:1201px) and (max-width:1500px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/fireplace_hu03b6caa395b3743220b4e9dfb053cff0_2032116_1500x0_resize_q75_box.jpg)}}@media(min-width:1501px){#homePageBackgroundImageDivStyled{background-image:url(https://log.taedi.net/images/site/fireplace.jpg)}}</style>
 <span class=on-the-fly-behavior></span>
 <div id=homePageBackgroundImageDivStyled class="background container-fluid"></div>
 <div class="container content text-center">
@@ -207,8 +207,8 @@ https://gohugo.io/content-management/front-matter/
 <div class="col-md-4 col-sm-12">
 <h5>Contact</h5>
 <ul>
-<li><span>Email: </span> <span>taedi90@gmail.com</span></li>
-<li><span>Github: </span> <span>https://github.com/taedi90</span></li>
+<li><span>Email: </span> <a href=mailto:taedi90@gmail.com><span>taedi90@gmail.com</span></a></li>
+<li><span>Github: </span> <a href=https://github.com/taedi90><span>https://github.com/taedi90</span></a></li>
 </ul>
 </div>
 </div>
