--- a/search/index.html
+++ b/search/index.html
@@ -122,8 +122,8 @@ Taedi's Log</a>
 <div class="col-md-4 col-sm-12">
 <h5>Contact</h5>
 <ul>
-<li><span>Email: </span> <span>taedi90@gmail.com</span></li>
-<li><span>Github: </span> <span>https://github.com/taedi90</span></li>
+<li><span>Email: </span> <a href=mailto:taedi90@gmail.com><span>taedi90@gmail.com</span></a></li>
+<li><span>Github: </span> <a href=https://github.com/taedi90><span>https://github.com/taedi90</span></a></li>
 </ul>
 </div>
 </div>
