--- a/notion-to-hugo-toha/index.html
+++ b/notion-to-hugo-toha/index.html
@@ -242,8 +242,6 @@ path <span style=color:#f92672>=</span> path <span style=color:#f92672>+</span> 
 <p><img src=images/pic-0001.png alt="스크린샷 2021-10-17 오전 10.07.11.png"></p>
 <p>링크 : <a href=https://github.com/taedi90/notion2toha>https://github.com/taedi90/notion2toha</a></p>
 </div>
-<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100%;text-align:center data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
-<script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
@@ -298,8 +296,8 @@ path <span style=color:#f92672>=</span> path <span style=color:#f92672>+</span> 
 <div class="col-md-4 col-sm-12">
 <h5>Contact</h5>
 <ul>
-<li><span>Email: </span> <span>taedi90@gmail.com</span></li>
-<li><span>Github: </span> <span>https://github.com/taedi90</span></li>
+<li><span>Email: </span> <a href=mailto:taedi90@gmail.com><span>taedi90@gmail.com</span></a></li>
+<li><span>Github: </span> <a href=https://github.com/taedi90><span>https://github.com/taedi90</span></a></li>
 </ul>
 </div>
 </div>
