--- a/python-virtual-environment-setup/index.html
+++ b/python-virtual-environment-setup/index.html
@@ -386,8 +386,6 @@ alias python<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;pyt
 <li><a href=https://towardsdatascience.com/python-environment-101-1d68bda3094d>https://towardsdatascience.com/python-environment-101-1d68bda3094d</a></li>
 </ul>
 </div>
-<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100%;text-align:center data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
-<script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
@@ -476,8 +474,8 @@ alias python<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;pyt
 <div class="col-md-4 col-sm-12">
 <h5>Contact</h5>
 <ul>
-<li><span>Email: </span> <span>taedi90@gmail.com</span></li>
-<li><span>Github: </span> <span>https://github.com/taedi90</span></li>
+<li><span>Email: </span> <a href=mailto:taedi90@gmail.com><span>taedi90@gmail.com</span></a></li>
+<li><span>Github: </span> <a href=https://github.com/taedi90><span>https://github.com/taedi90</span></a></li>
 </ul>
 </div>
 </div>
