--- a/tomcat-external-deploy-maven/index.html
+++ b/tomcat-external-deploy-maven/index.html
@@ -291,8 +291,6 @@ usr/local/tomcat/webapps.dist/manager
 <p><a href=https://www.baeldung.com/tomcat-deploy-war>https://www.baeldung.com/tomcat-deploy-war</a></p>
 <p><a href=https://maven.apache.org/examples/injecting-properties-via-settings.html>https://maven.apache.org/examples/injecting-properties-via-settings.html</a></p>
 </div>
-<ins class=adsbygoogle style=display:inline-block;min-width:400px;width:100%;text-align:center data-ad-client=ca-pub-1882367656929494 data-ad-slot=9457951065 data-ad-format=auto data-full-width-responsive=true></ins>
-<script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-12 next-article">
@@ -369,8 +367,8 @@ usr/local/tomcat/webapps.dist/manager
 <div class="col-md-4 col-sm-12">
 <h5>Contact</h5>
 <ul>
-<li><span>Email: </span> <span>taedi90@gmail.com</span></li>
-<li><span>Github: </span> <span>https://github.com/taedi90</span></li>
+<li><span>Email: </span> <a href=mailto:taedi90@gmail.com><span>taedi90@gmail.com</span></a></li>
+<li><span>Github: </span> <a href=https://github.com/taedi90><span>https://github.com/taedi90</span></a></li>
 </ul>
 </div>
 </div>
