deploy: c5073af227028809deb814252870d68bb6972934

--- a/hugo-setting/index.html
+++ b/hugo-setting/index.html
@@ -114,9 +114,9 @@ Taedi's Log</a>
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/hugo-install/ title="Github 블로그 설정  1. Hugo 설치" class="btn btn-outline-info">
+<a href=/tistory-blog-setting-4/ title="기존 주소 방문 시 리다이렉트 하기 - 티스토리 2차 도메인 설정 #3" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>Github 블로그 설정 1. Hugo 설치</div>
+<div class=next-prev-text>기존 주소 방문 시 리다이렉트 하기 - 티스토리 2차 도메인 설정 #3</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
