--- a/hugo-install/index.html
+++ b/hugo-install/index.html
@@ -145,9 +145,9 @@ hugo server --bind 아이피주소 -D
 </a>
 </div>
 <div class="col-md-6 next-article">
-<a href=/hugo-setting/ title="Github 블로그 설정 2. 세부 설정" class="btn btn-outline-info">
+<a href=/tistory-blog-setting/ title="티스토리 개인 도메인 구매 및 활용하기 - #1 구매동기, DNS설정, 오류해결" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>Github 블로그 설정 2. 세부 설정</div>
+<div class=next-prev-text>티스토리 개인 도메인 구매 및 활용하기 - #1 구매동기, DNS설정, 오류해결</div>
 </a>
 </div>
 </div>
