deploy: b69378d67d0056bb846d7668d1216910ca230c46

--- a/hugo-install/index.html
+++ b/hugo-install/index.html
@@ -59,7 +59,9 @@ Taedi's Log</a>
 <li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
 <li><a href=/posts/java/ title=java>java</a></li>
+<li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
 <li><a href=/posts/python/ title=python>python</a></li>
+<li><a href=/posts/server/ title=server>server</a></li>
 <li><a class=active href=/posts/blog/ title=blog>blog</a></li>
 </div>
 </ul>
@@ -139,9 +141,9 @@ hugo server --bind 아이피주소 -D
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/python-virtual-environment-setup/ title="파이썬 가상환경 설정(pyenv, pipenv)" class="btn btn-outline-info">
+<a href=/oci-centos-setting/ title="[OCI]CentOS 8 설치 및 세팅하기" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>파이썬 가상환경 설정(pyenv, pipenv)</div>
+<div class=next-prev-text>[OCI]CentOS 8 설치 및 세팅하기</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
