--- a/python-virtual-environment-setup/index.html
+++ b/python-virtual-environment-setup/index.html
@@ -59,7 +59,9 @@ Taedi's Log</a>
 <li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
 <li><a href=/posts/java/ title=java>java</a></li>
+<li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
 <li><a class=active href=/posts/python/ title=python>python</a></li>
+<li><a href=/posts/server/ title=server>server</a></li>
 <li><a href=/posts/blog/ title=blog>blog</a></li>
 </div>
 </ul>
@@ -370,15 +372,15 @@ alias python<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;pyt
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/eclipse-mac-kor-fix/ title="이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결" class="btn btn-outline-info">
+<a href=/vanillajs-modal-window/ title="[Vanilla JS]모달 알림창 만들어보기" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결</div>
+<div class=next-prev-text>[Vanilla JS]모달 알림창 만들어보기</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
-<a href=/hugo-install/ title="Github 블로그 설정  1. Hugo 설치" class="btn btn-outline-info">
+<a href=/oci-centos-setting/ title="[OCI]CentOS 8 설치 및 세팅하기" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>Github 블로그 설정 1. Hugo 설치</div>
+<div class=next-prev-text>[OCI]CentOS 8 설치 및 세팅하기</div>
 </a>
 </div>
 </div>
