--- a/eclipse-mac-kor-fix/index.html
+++ b/eclipse-mac-kor-fix/index.html
@@ -59,7 +59,9 @@ Taedi's Log</a>
 <li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
 <li><a class=active href=/posts/java/ title=java>java</a></li>
+<li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
 <li><a href=/posts/python/ title=python>python</a></li>
+<li><a href=/posts/server/ title=server>server</a></li>
 <li><a href=/posts/blog/ title=blog>blog</a></li>
 </div>
 </ul>
@@ -243,9 +245,9 @@ Taedi's Log</a>
 </a>
 </div>
 <div class="col-md-6 next-article">
-<a href=/python-virtual-environment-setup/ title="파이썬 가상환경 설정(pyenv, pipenv)" class="btn btn-outline-info">
+<a href=/vanillajs-ajax-module/ title="[Vanilla JS]Ajax 함수 모듈화" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>파이썬 가상환경 설정(pyenv, pipenv)</div>
+<div class=next-prev-text>[Vanilla JS]Ajax 함수 모듈화</div>
 </a>
 </div>
 </div>
