--- a/index.html
+++ b/index.html
@@ -86,6 +86,62 @@ Taedi's Log</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/vanillajs-modal-window/ title="[Vanilla JS]모달 알림창 만들어보기" class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/hero/js.png alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>[Vanilla JS]모달 알림창 만들어보기</h5>
+<p class="card-text post-summary"> 프로젝트를 진행하면서 알림이나 서브 컨텐츠를 alert 창이나 pop-up window를 이용하지 않고 처리하고싶은 욕심이 생겨 모달창을 공부해보았다.
+시도해본 것 여러 창을 동시에 띄울 수 있어야 하고, 포커싱 된 요소가 최상단에 위치해야한다. 버튼을 눌렀을 때 예약된 함수를 불러올 수 있어야 한다. 드래그&드롭으로 이동이 가능해야한다. html, css에 별도로 구성요소를 세팅하지 않고 .js 파일 링크만으로 동작해야한다. 동작 영상 코드 'use strict'; /** * Vanilla JavaScript 모달 알림창 스크립트 * * @param {string} html - (optional) 모달창 내용 * @param {int} kind - (optional) 버튼 종류 (1: 확인, 2: 예&아니오) * @param {function} confirmCallback - (optional) 확인, 예 클릭 후 실행 함수 * @param {function} cancelCallback - (optional) 아니오 클릭 후 실행 함수 * * @example * const modalContainer = new ModalContainer(); * modalContainer.</p>
+</div>
+<div class=card-footer>
+<span class=float-left>2021년 12월 05일</span>
+<a href=/vanillajs-modal-window/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/vanillajs-ajax-module/ title="[Vanilla JS]Ajax 함수 모듈화" class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/hero/js.png alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>[Vanilla JS]Ajax 함수 모듈화</h5>
+<p class="card-text post-summary"> 개인 프로젝트나 팀 프로젝트 할 것 없이 Ajax 를 매우 많은 곳에 사용했는데 그때마다 코드를 작성하려니 contentType 같이 외우기 까다로운 부분도 있고 코드도 길어진다고 판단하여 모듈화를 하여 사용하였다.
+개인적으로 post 방식으로 json 데이터를 사용하는 경우가 많아서 기본값으로 두었고, 데이터는 &ldquo;json / multipart / urlencoded&rdquo; 에 대한 부분만 고려했다.
+코드는 짧지만 불필요한 if 문이라던지(막상 지우려니 잘 안된다..) 깔끔해 보이지 않아서 한참이나 고민했지만 결국 만족할 만큼 다듬지 못한 것 같다.
+시도해본 것 ajax 통신 이후 결과 여부에 따라 지정한 콜백함수 호출 필요한 전달인자만 입력하면 되도록 코드 'use strict'; /** * Vanilla JavaScript Ajax 함수 모듈화 * * @param {string} url - (required) 호출 할 url * @param {object} data - (optional) 전송 할 데이터 * @param {function} confirmCallback - (optional) ajax 통신 완료 후 실행 할 함수 * @param {function} cancelCallback - (optional) ajax 통신 실패 시 실행 할 함수 * @param {string} method - (optional) post / get / put .</p>
+</div>
+<div class=card-footer>
+<span class=float-left>2021년 12월 05일</span>
+<a href=/vanillajs-ajax-module/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/oci-centos-setting/ title="[OCI]CentOS 8 설치 및 세팅하기" class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>[OCI]CentOS 8 설치 및 세팅하기</h5>
+<p class="card-text post-summary"> 어느날 우연히 오라클 클라우드 인프라(이하 OCI) 에서 프리티어 서비스를 제공하는 것을 알게 되었고 &lsquo;내가 만든 웹 프로젝트를 서비스할 서버를 직접 구축해보자!&rsquo; 라고 결심했다. 시도해본 것은 VM(가상머신)에 CentOS 를 설치하고 docker 환경에서 tomcat, nginx, jenkins, MySQL 까지 세팅하여 보았다. 그리고 추가적으로 도메인 설정, SSL 인증서 발급, NAS 서버에 자동 백업 설정, Github WebHook 까지 설정하여 프로젝트 테스트 용도의 웹 서버로 원활히 사용할 수 있도록 설정을 하였고 작업한 내용을 정리해보려 한다.
+기존에 시놀로지 NAS에 docker를 이용하면서 비슷한 경험을 해봐서 수월할거라 착각했지만 꽤나 복잡했고 정리한 내용도 다소 부족한 것 같다.</p>
+</div>
+<div class=card-footer>
+<span class=float-left>2021년 12월 01일</span>
+<a href=/oci-centos-setting/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
 <a href=/eclipse-mac-kor-fix/ title="이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결" class=post-card-link>
 <div class=card>
 <div class=card-head>
@@ -135,64 +191,6 @@ Taedi's Log</a>
 <div class=card-footer>
 <span class=float-left>2021년 09월 13일</span>
 <a href=/hugo-upload/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
-</div>
-</div>
-</a>
-</div>
-<div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/notion-to-hugo-toha/ title="Github 블로그 설정 3. Notion 페이지 변환" class=post-card-link>
-<div class=card>
-<div class=card-head>
-<img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
-</div>
-<div class=card-body>
-<h5 class=card-title>Github 블로그 설정 3. Notion 페이지 변환</h5>
-<p class="card-text post-summary"> 노션은 기본적으로 작성한 글을 마크다운으로 내보낼 수 있는 기능이 있어 hugo 포스팅을 하는데 탁월할 것이라 생각했다.
-하지만 노션의 내보내기 기능은 어딘가 아쉬운 부분이 있어 이것을 조금 손봐줄 필요가 있었다.
-추가 작업 H 태그 노션은 h1 ~ h3 태그만 지원하며 h4~h6 태그는 없다. 그런데 h1 태그는 포스트에 여러개 존재하면 SEO 점수에 좋지 않은 영향을 미치기 떄문에 hugo 포스팅을 염두에 둔다면 h2 와 h3 태그만 사용해야하는 문제가 발생한다.
-그대로 사용하기엔 기존의 글을 그대로 옮기기 위해 추가적인 작업이 필요한 문제와(h1 태그 안쓴 글이 없었다.</p>
-</div>
-<div class=card-footer>
-<span class=float-left>2021년 09월 13일</span>
-<a href=/notion-to-hugo-toha/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
-</div>
-</div>
-</a>
-</div>
-<div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/hugo-setting/ title="Github 블로그 설정 2. 세부 설정" class=post-card-link>
-<div class=card>
-<div class=card-head>
-<img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
-</div>
-<div class=card-body>
-<h5 class=card-title>Github 블로그 설정 2. 세부 설정</h5>
-<p class="card-text post-summary"> 글 게시 작성한 글을 게시하려면 md 형식으로 저장하여 프로젝트 내부의 content 폴더에 위치시키면 된다.
-front matter 설정 글 상단에 yaml, toml, json 키 값 쌍으로 이워진 front matter 를 작성해야한다. front matter 는 종류가 꽤 다양해 공식 문서를 확인해보고 필요한 것들을 선택적으로 사용하면 될 듯하다. 그리고 적용한 테마에 따라서 필수적으로 요구되는 front matter 가 달라질 수 있고 형식 또한 달라질 수 있는 듯 하다.
-https://gohugo.io/content-management/front-matter/
-섹션 설정 hugo는 폴더로 섹션과 하위 섹션을 구분할 수 있다.</p>
-</div>
-<div class=card-footer>
-<span class=float-left>2021년 09월 13일</span>
-<a href=/hugo-setting/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
-</div>
-</div>
-</a>
-</div>
-<div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/hugo-install/ title="Github 블로그 설정  1. Hugo 설치" class=post-card-link>
-<div class=card>
-<div class=card-head>
-<img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
-</div>
-<div class=card-body>
-<h5 class=card-title>Github 블로그 설정 1. Hugo 설치</h5>
-<p class="card-text post-summary"> 서론 코딩 공부를 시작하며 메모는 선택이 아닌 필수가 되었다. 처음에는 노션으로 기본적인 메모를 하고 어느정도 정리가 되면 티스토리에 업로드를 할 것을 계획했고 포스팅을 조금씩 해나가고 있었는데, 언젠가부터 글을 작성할 때 마다 reCAPTCHA 가 발생하기 시작했다.
-물론 직접 글을 작성할 때야 체크 항목이 하나 늘어난 것 뿐이지만, 문제는 OPEN API 방식의 포스팅은 완전히 불가능해져 애용하던 Notion2Tistory 를 활용할 수가 없어진 것이 큰 문제였다. (노션에 작성한 글을 API 없이 티스토리에 업로드 하기위해서는 대단한 인내심이 필요했다.</p>
-</div>
-<div class=card-footer>
-<span class=float-left>2021년 09월 13일</span>
-<a href=/hugo-install/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
