--- a/tistory-blog-setting/index.html
+++ b/tistory-blog-setting/index.html
@@ -59,7 +59,9 @@ Taedi's Log</a>
 <li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
 <li><a href=/posts/java/ title=java>java</a></li>
+<li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
 <li><a href=/posts/python/ title=python>python</a></li>
+<li><a href=/posts/server/ title=server>server</a></li>
 <li><a class=active href=/posts/blog/ title=blog>blog</a></li>
 </div>
 </ul>
