deploy: 683b25e1c124bc4db87cee6939b7cb97b19d1fc3

--- a/search/index.html
+++ b/search/index.html
@@ -60,11 +60,11 @@ Taedi's Log</a>
 <ul class=tree id=tree>
 <li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
-<li><a href=/posts/java/ title=java>java</a></li>
+<li><a href=/posts/java/ title=Java>Java</a></li>
 <li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
-<li><a href=/posts/python/ title=python>python</a></li>
-<li><a href=/posts/server/ title=server>server</a></li>
-<li><a href=/posts/blog/ title=blog>blog</a></li>
+<li><a href=/posts/python/ title=Python>Python</a></li>
+<li><a href=/posts/server/ title=Server>Server</a></li>
+<li><a href=/posts/blog/ title=Blog>Blog</a></li>
 </div>
 </ul>
 </div>
