deploy: 33bbca6e096bf63f92bfe2b39f6172c8c6a6c171

--- a/hugo-install/index.html
+++ b/hugo-install/index.html
@@ -62,6 +62,7 @@ Taedi's Log</a>
 <li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
 <li><a href=/posts/python/ title=Python>Python</a></li>
 <li><a href=/posts/server/ title=Server>Server</a></li>
+<li><a href=/posts/sql/ title=SQL>SQL</a></li>
 <li><a class=active href=/posts/blog/ title=Blog>Blog</a></li>
 </div>
 </ul>
@@ -141,9 +142,9 @@ hugo server --bind 아이피주소 -D
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/oci-centos-setting/ title="[OCI]CentOS 8 설치 및 세팅하기" class="btn btn-outline-info">
+<a href=/mysql-dump/ title="[mysqldump] MySQL DB 백업 및 복구" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>[OCI]CentOS 8 설치 및 세팅하기</div>
+<div class=next-prev-text>[mysqldump] MySQL DB 백업 및 복구</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
