--- a/index.html
+++ b/index.html
@@ -86,6 +86,23 @@ Taedi's Log</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/mysql-dump/ title="[mysqldump] MySQL DB 백업 및 복구" class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/images/hero/sql.png alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>[mysqldump] MySQL DB 백업 및 복구</h5>
+<p class="card-text post-summary"> 백업 # mysqldump -u root -p --databases [DB명] > [저장경로/파일명] mysqldump -u root -p --databases [DB명] > /var/lib/mysql/project_2021-12-07.sql 복원 # mysqldump -u root -p [DB명] &lt; [저장경로/파일명] mysql -u root -p project &lt; /var/lib/mysql/project_2021-12-07.sql 참고 https://code-factory.tistory.com/21 </p>
+</div>
+<div class=card-footer>
+<span class=float-left>2021년 12월 07일</span>
+<a href=/mysql-dump/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
 <a href=/vanillajs-modal-window/ title="[Vanilla JS]모달 알림창 만들어보기" class=post-card-link>
 <div class=card>
 <div class=card-head>
@@ -172,25 +189,6 @@ Taedi's Log</a>
 <div class=card-footer>
 <span class=float-left>2021년 09월 18일</span>
 <a href=/python-virtual-environment-setup/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
-</div>
-</div>
-</a>
-</div>
-<div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/hugo-upload/ title="Github 블로그 설정 4. 대망의 업로드" class=post-card-link>
-<div class=card>
-<div class=card-head>
-<img class=card-img-top src=/images/hero/blog.png alt="Card image cap">
-</div>
-<div class=card-body>
-<h5 class=card-title>Github 블로그 설정 4. 대망의 업로드</h5>
-<p class="card-text post-summary"> 서론 어느정도 설정을 마쳤다면 마지막은 세팅한 블로그를 Github Pages 에 올리는 일만 남았다. Hugo는 자동빌드가 되지않아 push 만 하면 페이지가 업데이트되는 jekyll과는 조금 다르다고 한다.
-그래서 전체 프로젝트 파일과 빌드 된 파일을 각각 저장할 공간이 필요한데 리포지토리를 각각 분리하여 구분하는 방식과 한개 리포지토리에 브랜치를 나누어 관리하는 방식이 있었다. 두가지 방법 모두 시도해보았는데 개인적으로 리포지토리가 많으면 관리가 어렵다고 느껴 한개 리포지토리를 활용한 방법을 택했다.
-진행순서 1. 리포지토리 생성 &lsquo;자신의 아이디.github.io&rsquo; 라는 이름의 리포지토리를 생성한다.</p>
-</div>
-<div class=card-footer>
-<span class=float-left>2021년 09월 13일</span>
-<a href=/hugo-upload/ title=Read class="float-right btn btn-outline-info btn-sm">Read</a>
 </div>
 </div>
 </a>
