--- a/oci-centos-setting/index.html
+++ b/oci-centos-setting/index.html
@@ -62,6 +62,7 @@ Taedi's Log</a>
 <li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
 <li><a href=/posts/python/ title=Python>Python</a></li>
 <li><a class=active href=/posts/server/ title=Server>Server</a></li>
+<li><a href=/posts/sql/ title=SQL>SQL</a></li>
 <li><a href=/posts/blog/ title=Blog>Blog</a></li>
 </div>
 </ul>
@@ -275,9 +276,9 @@ crontab -e
 </a>
 </div>
 <div class="col-md-6 next-article">
-<a href=/hugo-install/ title="Github 블로그 설정  1. Hugo 설치" class="btn btn-outline-info">
+<a href=/mysql-dump/ title="[mysqldump] MySQL DB 백업 및 복구" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>Github 블로그 설정 1. Hugo 설치</div>
+<div class=next-prev-text>[mysqldump] MySQL DB 백업 및 복구</div>
 </a>
 </div>
 </div>
