deploy: f2cc4640945878a4429e1becbf584a74ff7d3d5c

--- a/python-virtual-environment-setup/index.html
+++ b/python-virtual-environment-setup/index.html
@@ -60,6 +60,7 @@ Taedi's Log</a>
 <div class=subtree>
 <li><a href=/posts/java/ title=Java>Java</a></li>
 <li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
+<li><a href=/posts/logs/ title=Logs>Logs</a></li>
 <li><a class=active href=/posts/python/ title=Python>Python</a></li>
 <li><a href=/posts/server/ title=Server>Server</a></li>
 <li><a href=/posts/sql/ title=SQL>SQL</a></li>
@@ -373,9 +374,9 @@ alias python<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;pyt
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/vanillajs-modal-window/ title="[Vanilla JS]모달 알림창 만들어보기" class="btn btn-outline-info">
+<a href=/yi-teamproject-log-7/ title="팀 프로젝트 회고 - 7.Flow(주문 & 결제)" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>[Vanilla JS]모달 알림창 만들어보기</div>
+<div class=next-prev-text>팀 프로젝트 회고 - 7.Flow(주문 & 결제)</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
