--- a/vanillajs-modal-window/index.html
+++ b/vanillajs-modal-window/index.html
@@ -60,6 +60,7 @@ Taedi's Log</a>
 <div class=subtree>
 <li><a href=/posts/java/ title=Java>Java</a></li>
 <li><a class=active href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
+<li><a href=/posts/logs/ title=Logs>Logs</a></li>
 <li><a href=/posts/python/ title=Python>Python</a></li>
 <li><a href=/posts/server/ title=Server>Server</a></li>
 <li><a href=/posts/sql/ title=SQL>SQL</a></li>
@@ -467,9 +468,9 @@ Taedi's Log</a>
 </a>
 </div>
 <div class="col-md-6 next-article">
-<a href=/python-virtual-environment-setup/ title="파이썬 가상환경 설정(pyenv, pipenv)" class="btn btn-outline-info">
+<a href=/yi-teamproject-log-1/ title="팀 프로젝트(쇼핑몰 제작) 회고 - 1.후기" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>파이썬 가상환경 설정(pyenv, pipenv)</div>
+<div class=next-prev-text>팀 프로젝트(쇼핑몰 제작) 회고 - 1.후기</div>
 </a>
 </div>
 </div>
