--- a/oci-centos-setting/index.html
+++ b/oci-centos-setting/index.html
@@ -60,6 +60,7 @@ Taedi's Log</a>
 <div class=subtree>
 <li><a href=/posts/java/ title=Java>Java</a></li>
 <li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
+<li><a href=/posts/logs/ title=Logs>Logs</a></li>
 <li><a href=/posts/python/ title=Python>Python</a></li>
 <li><a class=active href=/posts/server/ title=Server>Server</a></li>
 <li><a href=/posts/sql/ title=SQL>SQL</a></li>
